tests/NormalTests/paczka1/fuzzy1/49581118.err
Error in line 1: nIqcvKf9 S114 59,5
Error in line 15: cLk2vQPor S160 44,3
Error in line 25: OE5tG2UMoDM S160 34,2
Error in line 26: OE5tG2UMoDM S114 72,9
